# show-me-the-money

./: .gitignore  Makefile  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: release.yaml  style.yaml  tests.yaml
showMeTheMoney.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
smtm/: categorizer.py  cli.py  dashboard.py  database.py  db.py  importer.py  models.py  parsers.py  pdf_render.py  pdf_report.py  report_gen.py  reports.py  server.py
smtm/adapters/: __init__.py  base.py  scotia_credit.py  scotia_debit.py
tests/: test_smtm.py
tests/e2e/: conftest.py  pages.py  test_dashboard.py
tests/fixtures/: new_credit.csv  old_credit.csv  old_debit.csv
