[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "show-me-the-money"
version = "2.0.0"
description = "CLI transaction categorizer and budget tool"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
smtm = "smtm.cli:main"

[tool.setuptools.packages.find]
include = ["smtm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
